--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -683,7 +683,7 @@ a {
   transition: color 0.6s;
 }
 .cid-ssGl9gxuM2 {
-  background-image: url("../../../assets/images/51079061-322651721697857-6229740343613456384-o-1080x718.jpg");
+  background-image: url("../../../assets/images/mbr-1920x1536.jpg");
 }
 .cid-ssGl9gxuM2 .mbr-section-subtitle {
   color: #fff;
@@ -1102,6 +1102,9 @@ a {
   padding-top: 3rem;
   padding-bottom: 0rem;
   background-color: #ffffff;
+}
+.cid-ssJVKYrZU0 .row {
+  flex-direction: row-reverse;
 }
 @media (min-width: 992px) {
   .cid-ssJVKYrZU0 .text-wrapper {
