--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1570,3 +1570,573 @@ a {
     margin-bottom: 1.5rem;
   }
 }
+.cid-ssGlalKs45 .navbar-dropdown {
+  position: relative !important;
+}
+.cid-ssGlalKs45 .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-ssGlalKs45 .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-ssGlalKs45 .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-ssGlalKs45 .dropdown-item:hover,
+.cid-ssGlalKs45 .dropdown-item:focus {
+  background: #b22b35 !important;
+  color: white !important;
+}
+.cid-ssGlalKs45 .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-ssGlalKs45 .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-ssGlalKs45 .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-ssGlalKs45 .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-ssGlalKs45 .nav-link {
+  position: relative;
+}
+.cid-ssGlalKs45 .container {
+  display: flex;
+  margin: auto;
+}
+.cid-ssGlalKs45 .iconfont-wrapper {
+  color: #ffffff !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-ssGlalKs45 .dropdown-menu,
+.cid-ssGlalKs45 .navbar.opened {
+  background: #9a0712 !important;
+}
+.cid-ssGlalKs45 .nav-item:focus,
+.cid-ssGlalKs45 .nav-link:focus {
+  outline: none;
+}
+.cid-ssGlalKs45 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-ssGlalKs45 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-ssGlalKs45 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-ssGlalKs45 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-ssGlalKs45 .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-ssGlalKs45 .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-ssGlalKs45 .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #9a0712;
+  color: #ffffff;
+}
+.cid-ssGlalKs45 .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-ssGlalKs45 .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-ssGlalKs45 .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-ssGlalKs45 .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-ssGlalKs45 .navbar.collapsed {
+  justify-content: center;
+}
+.cid-ssGlalKs45 .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-ssGlalKs45 .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+.cid-ssGlalKs45 .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-ssGlalKs45 .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-ssGlalKs45 .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-ssGlalKs45 .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-ssGlalKs45 .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-ssGlalKs45 .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-ssGlalKs45 .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-ssGlalKs45 .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-ssGlalKs45 .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-ssGlalKs45 .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-ssGlalKs45 .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-ssGlalKs45 .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-ssGlalKs45 .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-ssGlalKs45 .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-ssGlalKs45 .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-ssGlalKs45 .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-ssGlalKs45 .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-ssGlalKs45 .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-ssGlalKs45 .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-ssGlalKs45 .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-ssGlalKs45 .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-ssGlalKs45 .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-ssGlalKs45 .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-ssGlalKs45 .dropdown-item.active,
+.cid-ssGlalKs45 .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-ssGlalKs45 .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-ssGlalKs45 .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-ssGlalKs45 .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-ssGlalKs45 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #9a0712;
+}
+.cid-ssGlalKs45 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-ssGlalKs45 .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-ssGlalKs45 ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-ssGlalKs45 .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-ssGlalKs45 button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-ssGlalKs45 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-ssGlalKs45 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-ssGlalKs45 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-ssGlalKs45 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-ssGlalKs45 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-ssGlalKs45 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-ssGlalKs45 nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-ssGlalKs45 nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-ssGlalKs45 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-ssGlalKs45 .navbar-dropdown {
+  padding: 0 1rem;
+}
+.cid-ssGlalKs45 a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-ssGlalKs45 .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-ssGlalKs45 .navbar {
+    height: 70px;
+  }
+  .cid-ssGlalKs45 .navbar.opened {
+    height: auto;
+  }
+  .cid-ssGlalKs45 .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+@media (max-width: 600px) {
+  .cid-ssGlalKs45 .navbar-caption {
+    display: none;
+  }
+  .cid-ssGlalKs45 img {
+    display: none;
+  }
+}
+.cid-sLFDDR2Dxt {
+  padding-top: 45px;
+  padding-bottom: 90px;
+  overflow: hidden;
+  box-sizing: border-box;
+  background-color: #ffffff;
+}
+.cid-sLFDDR2Dxt .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-sLFDDR2Dxt .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-sLFDDR2Dxt .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sLFDDR2Dxt .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sLFDDR2Dxt .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #59585d;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-sLFDDR2Dxt .icon-focus {
+  font-size: 2rem !important;
+  width: 50px;
+  height: 50px;
+  top: calc(50% - 25px);
+  left: calc(50% - 25px);
+}
+.cid-sLFDDR2Dxt .icon-focus:before {
+  content: '+';
+  border-radius: 100px;
+  background: #444444;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 6px;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-sLFDDR2Dxt .icon-video {
+  font-size: 1.5rem !important;
+  width: 50px;
+  height: 50px;
+  top: calc(50% - 25px);
+  left: calc(50% - 25px);
+}
+.cid-sLFDDR2Dxt .icon-video:before {
+  border-radius: 100px;
+  background: #444444;
+  width: 100%;
+  height: 100%;
+  padding-left: 6px;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-title {
+  transition: all 0.5s ease;
+  position: absolute;
+  text-align: left;
+  display: none;
+  width: 100%;
+  bottom: 0;
+  right: 0;
+  padding: 1rem;
+  color: #ffffff;
+  font-weight: bold;
+  background: transparent;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+}
+.cid-sLFDDR2Dxt ul {
+  font-size: 0;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-filter ul {
+  text-align: left;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-filter ul li .btn {
+  border: none !important;
+  background-color: transparent;
+  color: #59585d !important;
+  padding: 0.5rem 1rem 0.6rem;
+  border-radius: 0;
+  margin: 0!important;
+  transition: padding, border 0s, transform .2s;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-filter ul li.active .btn {
+  padding: 0.5rem 1rem 0.5rem;
+  border-radius: 0 !important;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-filter ul li {
+  padding: 0;
+  margin: 0 .2rem;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-filter ul li:first-child,
+.cid-sLFDDR2Dxt .mbr-gallery-filter ul li:last-child {
+  margin: 0;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-item > div:hover .mbr-gallery-title {
+  display: block;
+}
+.cid-sLFDDR2Dxt .mbr-gallery-item > div:hover:before {
+  opacity: 0 !important;
+}
+.cid-sLFDDR2Dxt .btn {
+  background: none !important;
+  border-radius: 0 !important;
+  box-shadow: none !important;
+}
+.cid-sLFDDR2Dxt .btn.active:after {
+  animation: none;
+}
+.cid-sLFDDR2Dxt .btn:active {
+  box-shadow: none !important;
+}
+.cid-sLFDDR2Dxt .btn:hover {
+  background: transparent !important;
+}
+.cid-sLFDDR2Dxt .btn:hover:before {
+  background: transparent !important;
+}
+.cid-sLFDDR2Dxt .btn:before {
+  background-color: transparent !important;
+}
+.cid-sLFDDR2Dxt .btn:focus {
+  box-shadow: none !important;
+}
+.cid-sLFDDR2Dxt .mbr-section-title,
+.cid-sLFDDR2Dxt .mbr-gallery-filter ul {
+  color: #232323;
+  text-align: left;
+}
+.cid-sLuKEisDim {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #000000;
+}
+.cid-sLuKEisDim .social-media {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  padding-right: 4rem;
+}
+.cid-sLuKEisDim .social-media ul {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 8px;
+}
+.cid-sLuKEisDim .social-media ul li {
+  padding: 4px;
+  display: inline-block;
+}
+.cid-sLuKEisDim .logo-section {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  padding-left: 4rem;
+}
+.cid-sLuKEisDim .logo-section img {
+  width: auto;
+}
+.cid-sLuKEisDim .icon-transition span {
+  color: #ffffff;
+  display: block;
+  padding: 0.1rem 0.8rem;
+  height: 3em;
+  line-height: 3em;
+  border-radius: 50%;
+  background-color: #9a0712;
+  width: 3em;
+  -webkit-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  font-size: 13px;
+}
+.cid-sLuKEisDim .icon-transition span:hover {
+  background-color: #3f424e;
+}
+.cid-sLuKEisDim .mbr-text {
+  color: #a3a6b2;
+}
+@media (max-width: 991px) {
+  .cid-sLuKEisDim .social-media {
+    -webkit-justify-content: center;
+    justify-content: center;
+    padding-right: 15px;
+  }
+  .cid-sLuKEisDim .logo-section {
+    -webkit-justify-content: center;
+    justify-content: center;
+    padding-left: 15px;
+    margin-bottom: 1.5rem;
+  }
+  .cid-sLuKEisDim .mbr-text {
+    margin-bottom: 1.5rem;
+  }
+}
