--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1544,6 +1544,159 @@ a {
     margin-bottom: 1.5rem;
   }
 }
+.cid-sMARD251eT {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.cid-sMARD251eT .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-sMARD251eT .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sMARD251eT .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sMARD251eT .title {
+  padding: 0 2rem;
+}
+.cid-sMARD251eT .container {
+  padding: 0 1rem;
+}
+.cid-sMARD251eT .mbr-gallery-item div {
+  border-radius: 6px;
+  overflow: hidden;
+  margin: auto;
+  position: relative;
+  z-index: 10;
+  max-width: 400px;
+}
+.cid-sMARD251eT .mbr-gallery-item div img {
+  object-fit: cover;
+  height: 100%;
+}
+.cid-sMARD251eT .mbr-gallery-item div:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: lightgray;
+  transition: all 0.6s;
+  opacity: 0;
+  z-index: 9;
+}
+.cid-sMARD251eT .mbr-gallery-item div:after {
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: lightgray;
+  transition: all 0.6s;
+  opacity: 0;
+  z-index: 9;
+}
+.cid-sMARD251eT .mbr-gallery-item div:hover:before {
+  opacity: 0.5;
+  width: 0;
+  height: 0;
+}
+.cid-sMARD251eT .mbr-gallery-item div:hover:after {
+  opacity: 0;
+  height: 100%;
+  width: 100%;
+}
+.cid-sMARD251eT .mbr-gallery-filter {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-sMARD251eT .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-sMARD251eT .icon-focus {
+  display: none;
+}
+.cid-sMARD251eT .btn-primary-outline {
+  border: none !important;
+  color: gray !important;
+  padding: 1rem 1rem;
+  position: relative;
+  background: transparent !important;
+  font-weight: 400;
+}
+.cid-sMARD251eT .btn-primary-outline:hover {
+  background: transparent !important;
+  color: #b22b35 !important;
+}
+.cid-sMARD251eT li.active .btn {
+  background: transparent !important;
+  color: black !important;
+}
+.cid-sMARD251eT li {
+  position: relative;
+}
+.cid-sMARD251eT .mbr-gallery-filter ul li:not(:last-child):after {
+  content: '';
+  position: absolute;
+  height: 24px;
+  width: 1px;
+  right: 0px;
+  top: 26px;
+  background: lightgray;
+  transform: rotate(35deg);
+}
+.cid-sMARD251eT .btn {
+  font-family: Inter !important;
+}
+.cid-sMARD251eT .mbr-gallery-title {
+  font-size: 0.9em;
+  position: absolute;
+  display: flex;
+  width: 100%;
+  bottom: 0;
+  height: 100%;
+  padding: 2rem;
+  color: #fff;
+  z-index: 2;
+  justify-content: center;
+  align-items: flex-end;
+  transition: all 0.3s;
+  opacity: 0;
+}
+.cid-sMARD251eT .mbr-gallery-title:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sMARD251eT li:not(:last-child):after {
+    top: 9px;
+  }
+  .cid-sMARD251eT .btn-primary-outline {
+    padding: 0rem 1rem;
+    margin: 0 !important;
+  }
+  .cid-sMARD251eT .container {
+    padding: 0rem 0.5rem;
+  }
+  .cid-sMARD251eT .title {
+    padding: 0 1rem;
+  }
+}
+.cid-sMARD251eT H2 {
+  color: #89b758;
+}
+.cid-sMARD251eT H1 {
+  color: #3f424e;
+}
 .cid-ssGlalKs45 .navbar-dropdown {
   position: relative !important;
 }
@@ -1892,159 +2045,6 @@ a {
   .cid-ssGlalKs45 img {
     display: none;
   }
-}
-.cid-sLFDDR2Dxt {
-  padding-top: 45px;
-  padding-bottom: 90px;
-  overflow: hidden;
-  box-sizing: border-box;
-  background-color: #ffffff;
-}
-.cid-sLFDDR2Dxt .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-sLFDDR2Dxt .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-sLFDDR2Dxt .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-sLFDDR2Dxt .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-sLFDDR2Dxt .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #59585d;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-sLFDDR2Dxt .icon-focus {
-  font-size: 2rem !important;
-  width: 50px;
-  height: 50px;
-  top: calc(50% - 25px);
-  left: calc(50% - 25px);
-}
-.cid-sLFDDR2Dxt .icon-focus:before {
-  content: '+';
-  border-radius: 100px;
-  background: #444444;
-  width: 100%;
-  height: 100%;
-  padding-bottom: 6px;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-sLFDDR2Dxt .icon-video {
-  font-size: 1.5rem !important;
-  width: 50px;
-  height: 50px;
-  top: calc(50% - 25px);
-  left: calc(50% - 25px);
-}
-.cid-sLFDDR2Dxt .icon-video:before {
-  border-radius: 100px;
-  background: #444444;
-  width: 100%;
-  height: 100%;
-  padding-left: 6px;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-title {
-  transition: all 0.5s ease;
-  position: absolute;
-  text-align: left;
-  display: none;
-  width: 100%;
-  bottom: 0;
-  right: 0;
-  padding: 1rem;
-  color: #ffffff;
-  font-weight: bold;
-  background: transparent;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-}
-.cid-sLFDDR2Dxt ul {
-  font-size: 0;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-filter ul {
-  text-align: left;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-filter ul li .btn {
-  border: none !important;
-  background-color: transparent;
-  color: #59585d !important;
-  padding: 0.5rem 1rem 0.6rem;
-  border-radius: 0;
-  margin: 0!important;
-  transition: padding, border 0s, transform .2s;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-filter ul li.active .btn {
-  padding: 0.5rem 1rem 0.5rem;
-  border-radius: 0 !important;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-filter ul li {
-  padding: 0;
-  margin: 0 .2rem;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-filter ul li:first-child,
-.cid-sLFDDR2Dxt .mbr-gallery-filter ul li:last-child {
-  margin: 0;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-item > div:hover .mbr-gallery-title {
-  display: block;
-}
-.cid-sLFDDR2Dxt .mbr-gallery-item > div:hover:before {
-  opacity: 0 !important;
-}
-.cid-sLFDDR2Dxt .btn {
-  background: none !important;
-  border-radius: 0 !important;
-  box-shadow: none !important;
-}
-.cid-sLFDDR2Dxt .btn.active:after {
-  animation: none;
-}
-.cid-sLFDDR2Dxt .btn:active {
-  box-shadow: none !important;
-}
-.cid-sLFDDR2Dxt .btn:hover {
-  background: transparent !important;
-}
-.cid-sLFDDR2Dxt .btn:hover:before {
-  background: transparent !important;
-}
-.cid-sLFDDR2Dxt .btn:before {
-  background-color: transparent !important;
-}
-.cid-sLFDDR2Dxt .btn:focus {
-  box-shadow: none !important;
-}
-.cid-sLFDDR2Dxt .mbr-section-title,
-.cid-sLFDDR2Dxt .mbr-gallery-filter ul {
-  color: #232323;
-  text-align: left;
 }
 .cid-sLFXK0zNur {
   padding-top: 0rem;
