--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1544,157 +1544,114 @@ a {
     margin-bottom: 1.5rem;
   }
 }
-.cid-sMARD251eT {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
+.cid-sMZ2LNMrCf {
+  padding-top: 45px;
+  padding-bottom: 90px;
   overflow: hidden;
   box-sizing: border-box;
+  background-color: #ffffff;
 }
-.cid-sMARD251eT .mbr-slider .carousel-control {
+.cid-sMZ2LNMrCf .mbr-slider .carousel-control {
   background: #1b1b1b;
 }
-.cid-sMARD251eT .mbr-slider .carousel-control-prev {
+.cid-sMZ2LNMrCf .mbr-slider .carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-sMARD251eT .mbr-slider .carousel-control-next {
+.cid-sMZ2LNMrCf .mbr-slider .carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-sMARD251eT .title {
-  padding: 0 2rem;
-}
-.cid-sMARD251eT .container {
-  padding: 0 1rem;
-}
-.cid-sMARD251eT .mbr-gallery-item div {
-  border-radius: 6px;
-  overflow: hidden;
-  margin: auto;
-  position: relative;
-  z-index: 10;
-  max-width: 400px;
-}
-.cid-sMARD251eT .mbr-gallery-item div img {
-  object-fit: cover;
-  height: 100%;
-}
-.cid-sMARD251eT .mbr-gallery-item div:before {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background: lightgray;
-  transition: all 0.6s;
-  opacity: 0;
-  z-index: 9;
-}
-.cid-sMARD251eT .mbr-gallery-item div:after {
-  content: '';
-  width: 0;
-  height: 0;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background: lightgray;
-  transition: all 0.6s;
-  opacity: 0;
-  z-index: 9;
-}
-.cid-sMARD251eT .mbr-gallery-item div:hover:before {
-  opacity: 0.5;
-  width: 0;
-  height: 0;
-}
-.cid-sMARD251eT .mbr-gallery-item div:hover:after {
-  opacity: 0;
-  height: 100%;
-  width: 100%;
-}
-.cid-sMARD251eT .mbr-gallery-filter {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-.cid-sMARD251eT .mbr-slider .modal-body .close {
+.cid-sMZ2LNMrCf .mbr-slider .modal-body .close {
   background: #1b1b1b;
 }
-.cid-sMARD251eT .icon-focus {
-  display: none;
-}
-.cid-sMARD251eT .btn-primary-outline {
-  border: none !important;
-  color: gray !important;
-  padding: 1rem 1rem;
-  position: relative;
-  background: transparent !important;
-  font-weight: 400;
-}
-.cid-sMARD251eT .btn-primary-outline:hover {
-  background: transparent !important;
-  color: #b22b35 !important;
-}
-.cid-sMARD251eT li.active .btn {
-  background: transparent !important;
-  color: black !important;
-}
-.cid-sMARD251eT li {
-  position: relative;
-}
-.cid-sMARD251eT .mbr-gallery-filter ul li:not(:last-child):after {
+.cid-sMZ2LNMrCf .mbr-gallery-item > div::before {
   content: '';
   position: absolute;
-  height: 24px;
-  width: 1px;
-  right: 0px;
-  top: 26px;
-  background: lightgray;
-  transform: rotate(35deg);
-}
-.cid-sMARD251eT .btn {
-  font-family: Inter !important;
-}
-.cid-sMARD251eT .mbr-gallery-title {
-  font-size: 0.9em;
-  position: absolute;
-  display: flex;
+  left: 0;
+  top: 0;
   width: 100%;
-  bottom: 0;
   height: 100%;
-  padding: 2rem;
-  color: #fff;
-  z-index: 2;
-  justify-content: center;
-  align-items: flex-end;
-  transition: all 0.3s;
+  background-color: #ffffff;
   opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
 }
-.cid-sMARD251eT .mbr-gallery-title:hover {
-  opacity: 1;
+.cid-sMZ2LNMrCf .icon-focus {
+  display: none;
 }
-@media (max-width: 767px) {
-  .cid-sMARD251eT li:not(:last-child):after {
-    top: 9px;
-  }
-  .cid-sMARD251eT .btn-primary-outline {
-    padding: 0rem 1rem;
-    margin: 0 !important;
-  }
-  .cid-sMARD251eT .container {
-    padding: 0rem 0.5rem;
-  }
-  .cid-sMARD251eT .title {
-    padding: 0 1rem;
-  }
+.cid-sMZ2LNMrCf .mbr-gallery-title {
+  transition: all 0.5s ease;
+  position: absolute;
+  text-align: left;
+  display: none;
+  width: 100%;
+  top: 0;
+  right: 0;
+  padding: 1rem;
+  color: #000000;
+  font-weight: bold;
+  background: transparent;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
 }
-.cid-sMARD251eT H2 {
-  color: #89b758;
+.cid-sMZ2LNMrCf ul {
+  font-size: 0;
 }
-.cid-sMARD251eT H1 {
+.cid-sMZ2LNMrCf .mbr-gallery-filter ul li .btn {
+  border: none;
+  background-color: transparent;
+  color: #232323 !important;
+  padding: 0.5rem 1rem 0.6rem;
+  border-radius: 0;
+  margin: 0 !important;
+  transition: padding, border 0s, transform 0.2s;
+}
+.cid-sMZ2LNMrCf .mbr-gallery-filter ul li.active .btn {
+  padding: 0.5rem 1rem 0.5rem;
+  border-radius: 0 !important;
+  position: relative;
+}
+.cid-sMZ2LNMrCf .mbr-gallery-filter ul li.active .btn:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(90deg, #b22b35, #b22b35);
+}
+.cid-sMZ2LNMrCf .mbr-gallery-filter ul li {
+  padding: 0;
+}
+.cid-sMZ2LNMrCf .mbr-gallery-item > div:hover .mbr-gallery-title {
+  padding-bottom: 1.5rem;
+  display: block;
+}
+.cid-sMZ2LNMrCf .mbr-gallery-item > div:hover:before {
+  opacity: 0 !important;
+}
+.cid-sMZ2LNMrCf .btn {
+  background: none;
+  border-radius: 0 !important;
+}
+.cid-sMZ2LNMrCf .btn:hover {
+  background: transparent !important;
+}
+.cid-sMZ2LNMrCf .btn:hover:before {
+  background: transparent !important;
+}
+.cid-sMZ2LNMrCf .btn:before {
+  background-color: transparent !important;
+}
+.cid-sMZ2LNMrCf .btn:focus {
+  box-shadow: none;
+}
+.cid-sMZ2LNMrCf .mbr-section-title {
+  position: relative;
+  z-index: 1;
   color: #3f424e;
 }
 .cid-ssGlalKs45 .navbar-dropdown {
