create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1311,6 +1311,19 @@ a {
 .cid-sLzJE4GjuH .mbr-text {
   text-align: center;
 }
+.cid-sN0bYTEix7 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-sN0bYTEix7 .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sN0bYTEix7 .mbr-section-title,
+.cid-sN0bYTEix7 .mbr-section-subtitle,
+.cid-sN0bYTEix7 .mbr-text {
+  text-align: center;
+}
 .cid-sLywiaxxh0 {
   padding-top: 0rem;
   padding-bottom: 4rem;
