create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1167,7 +1167,7 @@ a {
 }
 .cid-sLu7qfgh8G {
   padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-bottom: 0rem;
   background-color: #000000;
 }
 .cid-sLu7qfgh8G .mbr-section-title {
@@ -1202,6 +1202,46 @@ a {
 }
 @media (max-width: 450px) {
   .cid-sLu7qfgh8G .button-top {
+    margin-top: 0px;
+  }
+}
+.cid-sRO5yEKh6x {
+  padding-top: 3rem;
+  padding-bottom: 6rem;
+  background-color: #000000;
+}
+.cid-sRO5yEKh6x .mbr-section-title {
+  margin-bottom: 50px;
+  color: #ffffff;
+}
+.cid-sRO5yEKh6x .line {
+  width: 100%;
+  background-color: #a3a6b2;
+  height: 2px;
+  margin: 0 0 30px;
+  padding: 0;
+}
+.cid-sRO5yEKh6x .date {
+  color: #ffffff;
+}
+.cid-sRO5yEKh6x .workplace {
+  color: #ffffff;
+}
+.cid-sRO5yEKh6x .description {
+  color: #a3a6b2;
+}
+.cid-sRO5yEKh6x .inline {
+  margin-bottom: 30px;
+}
+.cid-sRO5yEKh6x .button-top {
+  margin-top: 50px;
+  padding: 0;
+}
+.cid-sRO5yEKh6x .btn {
+  margin: 0;
+}
+@media (max-width: 450px) {
+  .cid-sRO5yEKh6x .button-top {
     margin-top: 0px;
   }
 }
